# nnf-to-cnf

./: README.md
Nnf2cnf/: .gitignore  ChangeLog.md  Nnf2cnf.cabal  README.md  package.yaml  stack.yaml
Nnf2cnf/examples/: test1  test2  test4  test5  test6  test7
Nnf2cnf/src/Text/PropoLogic/: Data.hs  Parser.hs
Nnf2cnf_/app/: Main.hs
Nnf2cnf_/examples/: test1
Nnf2cnf_/src/Text/PropoLogic/: Parser.hs
