name:                Nnf2cnf
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Nnf2cnf#readme
license:             BSD3
license-file:        LICENSE
author:              Hemanth Kapila
maintainer:          saihemanth@gmail.com
copyright:           2016 Author name here
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.PropoLogic.Data
                       , Text.PropoLogic.Parser
  build-depends:       base >= 4.7 && < 5,
                       megaparsec >= 5.0
  default-language:    Haskell2010

executable Nnf2cnf-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Nnf2cnf
  default-language:    Haskell2010

test-suite Nnf2cnf-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Nnf2cnf
                     , quickcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Nnf2cnf
